<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="35dp"
        android:layout_height="54dp"
        android:background="#DCDCDC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:theme="@style/Theme.ElizabethsStuffedAnimals.AppBarOverlay"
            android:visibility="visible" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgToy"
        android:layout_width="126dp"
        android:layout_height="138dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName">

        <RadioButton
            android:id="@+id/rbStuffedAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stuffed_animal" />

        <RadioButton
            android:id="@+id/rbDoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doll" />

        <RadioButton
            android:id="@+id/rbActionFigure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_figure" />
    </RadioGroup>

    <Button
        android:id="@+id/btnViewToys"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_view_toy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgToy" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="393dp"
        android:layout_height="459dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewToys">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/gallery_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnViewToys"
        app:layout_constraintTop_toBottomOf="@+id/rgToy" />

</androidx.constraintlayout.widget.ConstraintLayout>